# stage

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml
dependencies/: CMakeLists.txt  tinyexr.patch
examples/: CMakeLists.txt  scene_info.c  scene_info.cpp
src/: CMakeLists.txt  cie.h  image.cpp  image.h  mesh.h  scene.cpp  scene.h  stage.cpp  stage.h  stage_c.cpp  stage_c.h
src/backstage/: alignment.h  buffer.cpp  buffer.h  camera.h  cie.h  config.h  image.cpp  image.h  light.h  log.h  material.h  math.h  mesh.cpp  mesh.h  scene.cpp  scene.h
src/common/: camera.h  light.h  material.h
tests/: CMakeLists.txt  test_buffer.cpp  test_common.cpp  test_common.h  test_mesh.cpp
